--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${fileDirname}",
-            "args": ["web","--config","/data/exporter/hana_sql_exporter/hana_sql_exporter1.toml"]
+            "args": ["web","--config","/data/exporter/hana_sql_exporter/hana_sql_exporter1.toml","--logfile","/tmp/hana_sql_exporter.log"]
         }
     ]
 }
