feat(core): 重构数据收集逻辑并添加新功能
- 重构了数据收集逻辑，支持多指标查询和单指标查询
- 新增了查询定义和指标定义的结构体
- 实现了新的数据收集函数和查询处理函数
- 添加了版本过滤和schema过滤功能
- 优化了错误处理和日志记录

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,11 @@
             "request": "launch",
             "mode": "auto",
             "program": "main.go",
-            "args": ["web","--config","hana_sql_exporter.toml"]
+            "args": [
+                "web",
+                "--config",
+                "test/hana_sql_exporter.toml"
+            ]
         }
     ]
 }
