--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,21 @@
             "args": [
                 "web",
                 "--config",
-                "test/hana_sql_exporter.toml"
+                "test/test.toml"
+            ]
+        },
+        {
+            "name": "convert",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "main.go",
+            "args": [
+                "convert",
+                "-i",
+                "test/metrics.json",
+                "-o",
+                "test/output.toml"
             ]
         }
     ]
