--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,24 @@ jobs:
 
       - name: Build
         run: |
-          make all
+          PLATFORMS="linux/amd64 linux/arm64 windows/amd64 windows/arm64 darwin/amd64 darwin/arm64"
+          for platform in $PLATFORMS; do
+            make $platform
+          done
+
+      - name: Compress Artifacts
+        run: |
           cd build
-          gzip *
+          for dir in */; do
+            platform=${dir%/}
+            cd "$platform"
+            if [[ -f "hana_sql_exporter.exe" ]]; then
+              gzip -c "hana_sql_exporter.exe" > "hana_sql_exporter_${platform}.exe.gz"
+            else
+              gzip -c "hana_sql_exporter" > "hana_sql_exporter_${platform}.gz"
+            fi
+            cd ..
+          done
 
       - name: Generate Release Notes
         if: github.event.release
@@ -41,7 +56,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: github.event.release
         with:
-          files: build/*.gz
+          files: build/**/*.gz
           body_path: ${{ github.workspace }}-RELEASE_NOTES.md
           token: ${{ secrets.GITHUB_TOKEN }}
 
