ci(release): 更新构建产物名称并设置不覆盖上传
- 修改构建产物名称，增加架构信息
- 设置上传时不覆盖已有文件

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,10 +85,11 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: hana_sql_exporter-${{ matrix.platform }}
+          name: hana_sql_exporter-${{ matrix.platform }}-${{ matrix.arch }}
           path: build/artifacts/*.gz
           retention-days: 1
           if-no-files-found: error
+          overwrite: false
 
   release:
     needs: build
