build(release): 优化 Windows 平台下的构建和安装流程
- 为 Windows 平台添加 7-Zip 安装步骤
- 修改 Windows 平台下的打包方式，优先使用 7-Zip
- 更新 install.sh 脚本，适应新的打包格式
- 增加配置文件和服务文件的检查及复制逻辑
- 优化安装过程中的清理步骤

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,16 @@ jobs:
         with:
           go-version-file: "go.mod"
 
+      - name: Install 7-Zip (Windows)
+        if: matrix.platform == 'windows'
+        shell: powershell
+        run: |
+          $url = "https://www.7-zip.org/a/7z2301-x64.exe"
+          $output = "7z-installer.exe"
+          Invoke-WebRequest -Uri $url -OutFile $output
+          Start-Process -FilePath $output -Args "/S" -Wait
+          echo "C:\Program Files\7-Zip" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
       - name: Build and Package
         shell: bash
         run: |
@@ -70,7 +80,11 @@ jobs:
           if [ "${{ matrix.platform }}" = "windows" ]; then
             OUTPUT="build/artifacts/hana_sql_exporter_${GOOS}_${GOARCH}.zip"
             cd "$BUILD_DIR"
-            zip -r "../../$OUTPUT" .
+            if command -v 7z &> /dev/null; then
+              7z a "../../$OUTPUT" .
+            else
+              powershell -Command "Compress-Archive -Path '.\*' -DestinationPath '..\..\$OUTPUT' -Force"
+            fi
           else
             OUTPUT="build/artifacts/hana_sql_exporter_${GOOS}_${GOARCH}.tar.gz"
             cd "$BUILD_DIR"
