--- a/hana_sql_exporter@.service
+++ b/hana_sql_exporter@.service
@@ -3,8 +3,9 @@ Description=SAP HANA SQL metrics exporter
 Documentation=https://github.com/wwsheng009/hana_sql_exporter
 
 [Service]
-Type=notify
-ExecStart=/opt/exporter/hana_sql_exporter/hana_sql_exporter web --config /opt/exporter/hana_sql_exporter/hana_sql_exporter.toml
+Type=simple
+WorkingDirectory=/opt/exporter/hana_sql_exporter/
+ExecStart=/opt/exporter/hana_sql_exporter/hana_sql_exporter web --config /opt/exporter/hana_sql_exporter/%i.toml
 
 [Install]
 WantedBy=multi-user.target
