refactor: 更新默认端口至9888并优化日志和错误处理
- 将默认端口从9658更改为9888，涉及Dockerfile、Kubernetes配置、README等文件
- 在日志中添加错误详情，提升调试效率
- 新增IP配置选项，支持自定义监听地址
- 删除过时的install.sh脚本，使用hana_sql_exporter.sh替代

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,7 +72,7 @@ jobs:
           # 复制服务配置文件
           if [ "${{ matrix.platform }}" = "linux" ]; then
             cp hana_sql_exporter@.service "$BUILD_DIR/"
-            cp install.sh "$BUILD_DIR/"
+            cp hana_sql_exporter.sh "$BUILD_DIR/"
             cp examples/metrics/demo.toml "$BUILD_DIR/hana_sql_exporter.toml"
           fi
           
