fix(service): 添加网络依赖和重启策略以增强服务稳定性
在服务配置中添加了`After=network.target`以确保在网络就绪后启动服务。同时，增加了`Restart=always`和`ExecReload`指令，以支持服务自动重启和重新加载配置，提高服务的稳定性和可靠性。

--- a/hana_sql_exporter@.service
+++ b/hana_sql_exporter@.service
@@ -1,11 +1,15 @@
 [Unit]
 Description=SAP HANA SQL metrics exporter
 Documentation=https://github.com/wwsheng009/hana_sql_exporter
+After=network.target
 
 [Service]
 Type=simple
+Restart=always
 WorkingDirectory=/opt/exporter/hana_sql_exporter/
 ExecStart=/opt/exporter/hana_sql_exporter/hana_sql_exporter web --config /opt/exporter/hana_sql_exporter/%i.toml
+ExecReload=/bin/kill -HUP $MAINPID
 
 [Install]
 WantedBy=multi-user.target
+DefaultInstance=default
