chore: 更新 hana_sql_exporter@.service 配置文件
增加 RestartSec、PrivateTmp、TimeoutStartSec 和 TimeoutStopSec 配置项，以提高服务的稳定性和安全性。

--- a/hana_sql_exporter@.service
+++ b/hana_sql_exporter@.service
@@ -9,6 +9,10 @@ Restart=always
 WorkingDirectory=/opt/exporter/hana_sql_exporter/
 ExecStart=/opt/exporter/hana_sql_exporter/hana_sql_exporter web --config /opt/exporter/hana_sql_exporter/%i.toml
 ExecReload=/bin/kill -HUP $MAINPID
+RestartSec=5s
+PrivateTmp=true
+TimeoutStartSec=30s
+TimeoutStopSec=30s
 
 [Install]
 WantedBy=multi-user.target
